style.css
body {
    background-color: hsl(0, 0%, 20%);
    margin: 0;
}

p {
    color: whitesmoke;
}

h1 {
    color: whitesmoke;
}

/* to ensure that the home page takes up the entire screen */
#home {
    width: 100%;
    height: 100%;
    overflow: hidden;

    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#homeIcons {
    display: flex;
    justify-content: space-evenly;
}

#personal {
    width: 100%;
    height: 50%;
    overflow: hidden;

    display: flex;
    justify-content: space-evenly;

    background-color: hsl(0, 0%, 8%);
}

#projects {
    width: 100%;
    height: 60%;
    overflow: hidden;

    text-align: center;
}

#education {
    width: 100%;
    height: 50%;
    overflow: hidden;
    
    text-align: center;
}

#contact {
    width: 100%;
    height: 100px;
    overflow: hidden;
}

